# recastnavigation

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .travis.yml  Accuaracy.ps1  AppState_8cpp.html  AppState_8h.html  AppState_8h.js  AppState_8h_source.html  BuildingAndIntegrating_8md.html  CHANGELOG.md  CHANGELOG_8md.html  CMakeLists.txt  CMakeLists_orig.txt  CNAME  CODE_OF_CONDUCT.md  CODE__OF__CONDUCT_8md.html  CONTRIBUTING.md  CONTRIBUTING_8md.html  ChunkyTriMesh_8cpp.html  ChunkyTriMesh_8cpp.js  ChunkyTriMesh_8h.html  ChunkyTriMesh_8h.js  ChunkyTriMesh_8h_source.html  ConvexVolumeTool_8cpp.html  ConvexVolumeTool_8cpp.js  ConvexVolumeTool_8h.html  ConvexVolumeTool_8h.js  ConvexVolumeTool_8h_source.html  CrowdTool_8cpp.html  CrowdTool_8cpp.js  CrowdTool_8h.html  CrowdTool_8h.js  CrowdTool_8h_source.html  DebugDraw_8cpp.html  DebugDraw_8cpp.js  DebugDraw_8h.html  DebugDraw_8h.js  (+914 more)
DebugUtils/: CMakeLists.txt
DebugUtils/Include/: DebugDraw.h  DetourDebugDraw.h  RecastDebugDraw.h  RecastDump.h
DebugUtils/Source/: DebugDraw.cpp  DetourDebugDraw.cpp  RecastDebugDraw.cpp  RecastDump.cpp
Detour/: CMakeLists.txt
Detour/Include/: DetourAlloc.h  DetourAssert.h  DetourCommon.h  DetourConfig.h  DetourDebugDraw.h  DetourIslandSystem.h  DetourMath.h  DetourModernCpp.h  DetourNavMesh.h  DetourNavMeshBuilder.h  DetourNavMeshQuery.h  DetourNode.h  DetourObstacleAvoidance.h  DetourStatNavMesh.h  DetourStatNavMeshBuilder.h  DetourStatus.h  DetourTileNavMesh.h  DetourTileNavMeshBuilder.h  DetourTiledNavMesh.h  DetourTiledNavMeshBuilder.h
Detour/Source/: DetourAlloc.cpp  DetourAssert.cpp  DetourCommon.cpp  DetourDebugDraw.cpp  DetourIslandSystem.cpp  DetourNavMesh.cpp  DetourNavMeshBuilder.cpp  DetourNavMeshQuery.cpp  DetourNode.cpp  DetourObstacleAvoidance.cpp  DetourStatNavMesh.cpp  DetourStatNavMeshBuilder.cpp  DetourTileNavMesh.cpp  DetourTileNavMeshBuilder.cpp  DetourTiledNavMesh.cpp  DetourTiledNavMeshBuilder.cpp
DetourCrowd/: CMakeLists.txt
DetourCrowd/Include/: DetourCrowd.h  DetourLocalBoundary.h  DetourObstacleAvoidance.h  DetourPathCorridor.h  DetourPathQueue.h  DetourProximityGrid.h
DetourCrowd/Source/: DetourCrowd.cpp  DetourLocalBoundary.cpp  DetourObstacleAvoidance.cpp  DetourPathCorridor.cpp  DetourPathQueue.cpp  DetourProximityGrid.cpp
DetourTileCache/: CMakeLists.txt  DetourTileCacheBuilder.cpp  DetourTileCacheBuilder.h
DetourTileCache/Include/: DetourTileCache.h  DetourTileCacheBuilder.h
DetourTileCache/Source/: DetourTileCache.cpp  DetourTileCacheBuilder.cpp
Docs/: FAQ.md  (+14 more)
Recast/: CMakeLists.txt  Readme.txt
Recast/Examples/: MeshLoaderObj.cpp  demo.cpp  glfont.h  imgui.cpp  imgui.h
Recast/Include/: CompactHeightfield.h  Heightfield.h  Recast.h  RecastAlloc.h  RecastAssert.h  RecastConfig.h  RecastDebugDraw.h  RecastLog.h  RecastModernCpp.h  RecastTimer.h  Util.h  Vector.h
Recast/Source/: CompactHeightfield.cpp  Recast.cpp  RecastAlloc.cpp  RecastArea.cpp  RecastAssert.cpp  RecastContour.cpp  RecastDebugDraw.cpp  RecastFilter.cpp  RecastLayers.cpp  RecastLog.cpp  RecastMesh.cpp  RecastMeshDetail.cpp  RecastRasterization.cpp  RecastRegion.cpp  RecastTimer.cpp
RecastCLI/: CMakeLists.txt  premake5.lua
RecastCLI/Contrib/catch2/: catch_amalgamated.cpp
RecastCLI/Include/: BuildContext.h  ChunkyTriMesh.h  FileOutput.h  Generators.h  InputGeom.h  MeshLoaderObj.h  PerfTimer.h  SampleInterfaces.h
RecastCLI/Source/: BuildContext.cpp  ChunkyTriMesh.cpp  Generators.cpp  InputGeom.cpp  MeshLoaderObj.cpp  PerfTimer.cpp  SampleInterfaces.cpp  ThreadPool.cpp  ThreadPool.hpp  main.cpp
RecastCLI/Tests/: CMakeLists.txt  Tests_Recast.cpp
RecastDemo/: CMakeLists.txt  Icon.icns  gen.bat  premake4.lua  premake5.bat  premake5.lua
RecastDemo/Contrib/: CMakeLists.txt  readme-sdl.txt  stb_image.h  stb_truetype.h
RecastDemo/Contrib/GL/: readme.txt
RecastDemo/Contrib/GLFW/: readme.txt
RecastDemo/Contrib/SDL/: readme.txt
RecastDemo/Contrib/fastlz/: fastlz.c
RecastDemo/Contrib/implot/: implot.h  implot_demo.cpp  (+1 more)
RecastDemo/Include/: AppData.h  AppState.h  BoxVolumeTool.h  Builder.h  BuilderStatMesh.h  BuilderStatMeshSimple.h  BuilderStatMeshTiled.h  BuilderStatMeshTiling.h  BuilderTiledMesh.h  ChunkyTriMesh.h  ConvexVolumeTool.h  CrowdManager.h  CrowdTool.h  ExtraLinkTool.h  Filelist.h  InputGeom.h  MeshLoaderObj.h  NavMeshPruneTool.h  NavMeshSceneTool.h  NavMeshTesterTool.h  NavmeshPruneTool.h  OffMeshConnectionTool.h  OffMeshLinkTool.h  PartitionedMesh.h  PerfTimer.h  Projection.h  Sample.h  SampleInterfaces.h  Sample_Debug.h  Sample_DynMesh.h  Sample_SizeFromLocalMinimaMesh.h  Sample_SizeFromPortalEdgeMesh.h  Sample_SoloMesh.h  Sample_SoloMeshLCM.h  Sample_SoloMeshSimple.h  Sample_SoloMeshTiled.h  Sample_StatMesh.h  Sample_StatMeshSimple.h  Sample_StatMeshTiled.h  Sample_TempObstacles.h  (+14 more)
RecastDemo/Source/: AppData.cpp  AppState.cpp  BoxVolumeTool.cpp  Builder.cpp  BuilderStatMesh.cpp  BuilderStatMeshSimple.cpp  BuilderStatMeshTiled.cpp  BuilderStatMeshTiling.cpp  BuilderTiledMesh.cpp  ChunkyTriMesh.cpp  ConvexVolumeTool.cpp  CrowdManager.cpp  CrowdTool.cpp  ExtraLinkTool.cpp  Filelist.cpp  InputGeom.cpp  MeshLoaderObj.cpp  NavMeshPruneTool.cpp  NavMeshSceneTool.cpp  NavMeshTesterTool.cpp  NavmeshPruneTool.cpp  OffMeshConnectionTool.cpp  OffMeshLinkTool.cpp  PartitionedMesh.cpp  PerfTimer.cpp  Sample.cpp  SampleInterfaces.cpp  Sample_Debug.cpp  Sample_DynMesh.cpp  Sample_SizeFromLocalMinimaMesh.cpp  Sample_SizeFromPortalEdgeMesh.cpp  Sample_SoloMesh.cpp  Sample_SoloMeshLCM.cpp  Sample_SoloMeshSimple.cpp  Sample_SoloMeshTiled.cpp  Sample_StatMesh.cpp  Sample_StatMeshSimple.cpp  Sample_StatMeshTiled.cpp  Sample_TempObstacles.cpp  Sample_TileMesh.cpp  (+16 more)
RecastDemo/cmake/: FindSDL2.cmake
Tests/: CMakeLists.txt  main.cpp
Tests/Detour/: Tests_Detour.cpp
Tests/DetourCrowd/: Tests_DetourPathCorridor.cpp
Tests/Recast/: Bench_rcVector.cpp  Tests_Alloc.cpp  Tests_Recast.cpp  Tests_RecastFilter.cpp  Tests_RecastRasterization.cpp  Tests_Recast_Sizes.cpp
Tests/RecastLCM/: Tests_Recast_LCM.h  Tests_Recast_LCM_2D.cpp  Tests_Recast_LCM_3D.cpp
(+207 files in other folders)
